# beyond-the-cutoff

./: .gitignore  .pre-commit-config.yaml  Makefile  PROJECT_TODO.md  README.md  pyproject.toml
apps/: human_annotation.py  offline_task_viewer.py
configs/: default.yaml  hybrid_science_v1_ollama.yaml  lora_science_v1_instruction_only_ollama.yaml  lora_science_v1_ollama.yaml  lora_science_v1_rag_trained_ollama.yaml  rag_baseline_ollama.yaml  subset20.yaml
docs/: DUAL_JUDGE_SYSTEM_SUMMARY.md  README.md  comparison_with_rag_vs_finetuning_paper.md  data_sourcing_plan.md  dataset_quality_report.md  elo_ranking_and_human_evaluation.md  evaluation_and_reporting_plan.md  evaluation_dataset_spec.md  evaluation_methodology.md  experiment_analysis_guide.md  experiment_readiness_checklist.md  experiment_setup_final.md  extraction_quality_metrics.md  finetuning_setup_summary.md  judge_comparison_analysis.md  model_adaptation_plan.md  model_implementation_analysis.md  offline_dataset_plan.md  ollama_modelfile_setup.md  pipeline_plan.md  prompt_format_specification.md  regression_test_plan.md  scientific_assistant_pipeline_plan.md  scientific_assistant_readiness.md  six_condition_experiment_setup.md
ollama/: Modelfile  Modelfile.instruction_only  Modelfile.rag_trained  Modelfile.rag_trained_f16  README.md
prompts/: pairwise_judge_powerful.md
scripts/: __init__.py  analyze_offline_dataset.py  ask.py  bootstrap_env.py  build_evaluation_dataset.py  build_metadata_catalog.py  build_offline_dataset.py  check_pipeline_status.py  check_processed_corpus.py  compare_models.py  compute_elo_rankings.py  evaluate_dataset_quality.py  evaluate_end_to_end.py  evaluate_models.py  fetch_arxiv_corpus.py  generate_offline_dataset.py  generate_offline_tasks.py  generate_responses.py  ingest_and_index.py  lock_dependencies.sh  prefetch_models.py  run_cog_psych_pipeline.sh  run_lora_finetune.py  run_pairwise_evaluation.py  score_predictions.py  sync_checkpoints.py  validate_experiment.py  validate_index_artifacts.py  visualize_comparison.py
tests/: __init__.py  conftest.py  test_arxiv.py  test_catalog.py  test_checkpoint_sync.py  test_chunking.py  test_comparison.py  test_config.py  test_data_quality.py  test_dataset_judge.py  test_elo_ranking.py  test_evaluation_harness_cli.py  test_experiment_comparisons.py  test_finetune.py  (+12 more)
(+155 files in other folders)
